--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,19 @@ body {
   font-size: 14pt;
 }
 
+button:focus {
+    outline: 0 !important;
+}
+
+.text-btn{
+  background:none;
+  border:none;
+  cursor: pointer;  
+  font-size: 18;
+  font-family: inherit;
+  color: #0081f2;
+}
+
 .main-wrap{
   padding: 0;
 }
@@ -30,7 +43,7 @@ body {
   margin: 10px 10px;
   height: 40px;
   display: grid;
-  grid-template-columns: 80px 120px 200px auto 70px;
+  grid-template-columns: 80px 60px 140px 200px auto 70px;
   /*justify-items: center;*/
   align-items: center;
 }
