--- a/src/app.css
+++ b/src/app.css
@@ -69,8 +69,8 @@ button:focus {
 #add-popup{
     font-size: 16px;
     display: none;
-    background-color: #fffacd;
-    width: 220px;
+    background-color: ivory;
+    width: 210px;
     padding: 15px 15px;
     /*left: 98px;*/
     /*top: 127px;*/
@@ -79,6 +79,19 @@ button:focus {
     box-shadow: -2px 3px 25px #a9a9a9;
 }
 
+#add-symbol-input{
+  font-size: 16px;
+}
+
+#search-icon{
+  width: 22px;
+  height: 22px;
+  position: fixed;
+  cursor: pointer;
+  position: absolute;
+  right: 24px;
+  padding: 2px;
+}
 
 /* cintainer */
 #container{
