--- a/src/app/app.css
+++ b/src/app/app.css
@@ -38,17 +38,17 @@ button:focus {
 }
 
 #screen-button{
-  background: url(screen.png) no-repeat center;
+  background: url(./screen.png) no-repeat center;
   background-size: 70%;
 }
 
 #notifications-button{
-  background: url(notification.png) no-repeat center;
+  background: url(./notification.png) no-repeat center;
   background-size: 70%;
 }
 
 #setting-button{
-  background: url(setting.png) no-repeat center;
+  background: url(./setting.png) no-repeat center;
   background-size: 70%;
 }
 
