--- a/src/notification.css
+++ b/src/notification.css
@@ -8,3 +8,94 @@ body {
 button:focus {
   outline: 0 !important;
 }
+
+
+.text-btn{
+  background:none;
+  border:none;
+  cursor: pointer;  
+  font-size: 18;
+  font-family: inherit;
+  color: #0081f2;
+}
+
+#main-toolbar{
+  margin: 10px 10px;
+  height: 40px;
+  display: grid;
+  grid-template-columns: 120px 120px 120px;
+  /*justify-items: center;*/
+  align-items: center;
+}
+
+.main-tool > *{
+  height: 30px;
+}
+
+/* container */
+#container{
+  margin: 10px 10px;
+  border: #292929 1px solid;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+.item, .drag-tab, .non-drag-tab {
+  vertical-align: middle;
+  padding: 3px;
+}
+
+.item, .header-item {
+  z-index: 1;
+  display: grid;
+  grid-template-columns: 30px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 2fr auto;
+  align-items: center;
+  margin: 0 0 6px;
+  border: 6px;
+  list-style: none;
+}
+
+.drag-tab, .non-drag-tab, .check-tab {
+  display: inline-block;
+  left: 10px;
+}
+
+.drag-tab{
+  cursor: move;
+}
+
+.non-drag-tab{
+  visibility: hidden;
+}
+
+.drag-tab :empty, .non-drag-tab :empty{
+  margin: 4px 0;
+  border-radius: 16px;
+  height: 4px;
+  background: gray;
+}
+
+.list-cell{
+  vertical-align: sub;
+  font-size: smaller;
+  text-align: right;
+  padding-right: 10px;
+}
+
+.draggable {
+  position: fixed;
+  box-shadow: 0 0 4px 2px blue;
+}
+
+#place-holder {
+  z-index: 0;
+  display: block;
+  min-height: 12px;
+  margin: 0 0 6px;
+  border-radius: 6px;
+  list-style: none;
+  opacity: .7;
+}
