--- a/src/app.css
+++ b/src/app.css
@@ -164,6 +164,9 @@ button:focus {
 
 #last-update-time{
   font-family: Times; 
+  padding: 5px 10px;
+  border-radius: 6px;
+  border: #dfe1e5 1px solid;
 }
 
 /* popup manage window */
