--- a/src/notification.css
+++ b/src/notification.css
@@ -17,7 +17,7 @@ body {
   margin: 10px 10px;
   height: 40px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 6fr auto;
+  grid-template-columns: 1fr 1fr 6fr auto;
   /*justify-items: center;*/
   align-items: center;
 }
@@ -51,7 +51,7 @@ ul {
 .item, .header-item {
   z-index: 1;
   display: grid;
-  grid-template-columns: 50px 0.6fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr auto;
+  grid-template-columns: 80px 0.8fr 1fr 1fr 1fr 1fr 1fr 1fr 0.6fr 10px;
   align-items: center;
   margin: 0 0 6px;
   border: 6px;
