--- a/src/notification.css
+++ b/src/notification.css
@@ -110,3 +110,32 @@ ul {
   list-style: none;
   opacity: .7;
 }
+
+.modal-dialog.modal-edit{
+  max-width: 800px;
+}
+
+.edit-container{
+  display: grid;
+  grid-template-columns: 1fr 30px 1fr;
+  height: 320px;
+}
+
+.edit-menu, .edit-values{
+  border: #292929 1px solid;
+}
+
+.edit-dropdown{
+  margin: 10px;
+}
+
+.edit-args{
+  margin: 10px;
+  height: 160px;
+  border: #292929 1px solid;
+}
+
+#edit-add-btn{
+  margin-left: 10px;
+  margin: 0 20px 0 155px;
+}
