--- a/src/notification.css
+++ b/src/notification.css
@@ -133,13 +133,14 @@ ul {
   margin: 10px;
   height: 215px;
   border: #292929 1px solid;
+  overflow: auto;
 
 }
 
 .arg-label-text{
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 70% 30%;
   display: grid;
-  padding: 10px 15px;
+  padding: 10px 15px 5px 15px;
 }
 
 .edit-menu-footer{
@@ -150,4 +151,25 @@ ul {
 
 #edit-add-btn{
   margin: 0 10px;
+}
+
+.edit-values{
+  overflow: auto;
+}
+
+.edit-value{
+  grid-template-columns: 1fr 6fr auto;
+  display: grid;
+  padding: 5px 5px 5px 0px;
+  border: 2px outset;
+  margin: 15px 10px;
+  align-items: center;
+}
+
+.edit-value:active{
+  border: 2px inset;
+}
+
+.edit-value .edit-name{
+  padding-left: 10px;
 }
