--- a/src/notification.css
+++ b/src/notification.css
@@ -138,9 +138,17 @@ ul {
 }
 
 .arg-label-text{
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 30% 40% 30%;
   display: grid;
   padding: 10px 15px 5px 15px;
+}
+
+.arg-label-text .arg-text-val.name{
+  grid-column-start: span 2;
+}
+
+.arg-label-text .label-input.value{
+  grid-column-start: span 2;
 }
 
 .edit-menu-footer{
